--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <video autoplay loop muted class="video-background">
-        <source src="../Project-Kitsune.mp4" type="video/mp4">
+        <source src="../../Project-Kitsune.mp4" type="video/mp4">
     </video>
     <header>
         <h1>Termos de Serviço</h1>
@@ -90,7 +90,7 @@
         </section>
         <section>
             <h2>5. Contato</h2>
-            <p>Para dúvidas sobre estes termos, entre em contato conosco através do e-mail: suporte@exemplo.com</p>
+            <p>Para dúvidas sobre estes termos, entre em contato conosco através do e-mail: RadiantStudios.Suporte@gmail.com</p>
         </section>
     </main>
     <footer>
