--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Website</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
     <style>
         body {
             background-color: black;
@@ -110,13 +110,13 @@
         <p>&copy; 2025 Radiant Studios. Todos os direitos reservados.</p>
         <nav>
             <ul>
-                <li><a href="pages/terms-of-service.html">Termos de Serviço</a></li>
-                <li><a href="pages/privacy-policy.html">Política de Privacidade</a></li>
-                <li><a href="pages/contact.html">Contato</a></li>
-                <li><a href="pages/about.html">Sobre</a></li>
+                <li><a href="/src/pages/terms-of-service.html">Termos de Serviço</a></li>
+                <li><a href="/src/pages/privacy-policy.html">Política de Privacidade</a></li>
+                <li><a href="/src/pages/contact.html">Contato</a></li>
+                <li><a href="/src/pages/about.html">Sobre</a></li>
             </ul>
         </nav>
     </footer>
-    <script src="scripts/app.js"></script>
+    <script src="/src/scripts/app.js"></script>
 </body>
 </html>
