--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
         <p>&copy; 2025 Radiant Studios. Todos os direitos reservados.</p>
         <nav>
             <ul>
-                <li><a href="pages/terms-of-service.html">Termos de Serviço</a></li>
-                <li><a href="pages/privacy-policy.html">Política de Privacidade</a></li>
-                <li><a href="pages/contact.html">Contato</a></li>
-                <li><a href="pages/about.html">Sobre</a></li>
+                <li><a href="/pages/terms-of-service.html">Termos de Serviço</a></li>
+                <li><a href="/pages/privacy-policy.html">Política de Privacidade</a></li>
+                <li><a href="/pages/contact.html">Contato</a></li>
+                <li><a href="/pages/about.html">Sobre</a></li>
             </ul>
         </nav>
     </footer>
