--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <video autoplay loop muted class="video-background">
-        <source src="../../Project-Kitsune.mp4" type="video/mp4">
+        <source src="../Project-Kitsune.mp4" type="video/mp4">
     </video>
     <header>
         <h1>Contato</h1>
