--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bot Website</title>
-    <link rel="stylesheet" href="/src/styles/style.css">
+    <title>RadiantStudiosBot</title>
+    <link rel="stylesheet" href="/styles/style.css">
     <style>
         body {
             background-color: black;
@@ -110,13 +110,13 @@
         <p>&copy; 2025 Radiant Studios. Todos os direitos reservados.</p>
         <nav>
             <ul>
-                <li><a href="/pages/terms-of-service.html">Termos de Serviço</a></li>
-                <li><a href="/pages/privacy-policy.html">Política de Privacidade</a></li>
-                <li><a href="/pages/contact.html">Contato</a></li>
-                <li><a href="/pages/about.html">Sobre</a></li>
+                <li><a href="./pages/terms.html">Termos de Serviço</a></li>
+                <li><a href="./pages/privacy.html">Política de Privacidade</a></li>
+                <li><a href="./pages/contact.html">Contato</a></li>
+                <li><a href="./pages/about.html">Sobre</a></li>
             </ul>
         </nav>
     </footer>
-    <script src="/src/scripts/app.js"></script>
+    <script src="/scripts/app.js"></script>
 </body>
 </html>
